--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,7 @@
       <h1>A page</h1>
       <!-- My favourite 90s music compilation is 'No Alternative' -->
       <!-- Also... is it a button? -->
-      <img
-        src="doc.svg"
-        role="button"
-        width="200"
-        height="200"
-        alt="doc image"
-      />
+      <img src="doc.svg" width="200" height="200" alt="doc image" />
       <!-- This URL seems fishy. -->
       <!-- Also, links to other domains should have the attribute `rel="noopener"` or `rel="noreferrer"`. -->
       <p>
